Aligned Create issue form

--- a/app/assets/stylesheets/issues.scss
+++ b/app/assets/stylesheets/issues.scss
@@ -26,7 +26,18 @@
 }
 
 
-
+.grid{
+  display: grid;
+  grid-template-columns: min-content 1fr;
+  grid-gap: 1em;
+  max-width: 20em;
+  margin: 0 auto;
+  align-items: center;
+  justify-items: stretch;
+}
+.grid label{
+  text-align: right;
+}
 
 
 
